<resources>
    <string name="app_name">AndroidWorkshopApp2</string>
    <string name="clothing_tv">Prenda</string>
    <string name="collection_tv">Colección</string>
    <string name="season_tv">Temporada</string>
    <string name="designer_tv">Diseñador</string>
    <string name="load_btn">Guardar</string>
    <string name="brand_tv">Marca</string>
    <string name="lv">Louis Vuitton</string>
    <string name="gucci">Gucci</string>
    <string name="fendi">Fendi</string>
    <string name="hermes">Hermes</string>
    <string name="dolce">Dolce Gabanna</string>
    <string name="ferragamo">Salvatore Ferragamo</string>
    <string name="list_btn">Ver lista</string>
    <string name="listCount_tv">Prendas:</string>
    <string name="count_tv">0</string>
    <string name="clothingNameError">Prenda vacía</string>
    <string name="clothingNameErrorHelp">Se requiere una prenda</string>
    <string name="collectionError">Colección vacía</string>
    <string name="collectionErrorHelp">Se requiere una colección</string>
    <string name="seasonError">Temporada vacía</string>
    <string name="seasonErrorHelp">Se requiere una temporada</string>
    <string name="designerError">Diseñador vacía</string>
    <string name="designerErrorHelp">Se requiere un diseñador</string>
    <string name="itemsError">Lista vacía</string>
    <string name="brandDescription">logo-brand</string>
    <string name="idToast">La prenda seleccionada tiene id:</string>
    <string name="delete_btn">Eliminar</string>
</resources>